--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ h1 {
 .card {
 	position: relative;
 	width: 150px;
-	height: 100px;
+	height: 150px;
 	perspective: 800px;
 	cursor: pointer;
 }
@@ -38,13 +38,14 @@ h1 {
 	font-size: 2rem;
 	background: white;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	padding: 4px;
 }
 
 .card .front img {
 	width: 100%;
 	height: 100%;
 	border-radius: 10px;
-	object-fit: cover;
+	object-fit: contain;
 }
 
 .card .back {
